src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

html {
  scroll-behavior: smooth;
}

body {
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  scrollbar-width: 0;
  background: url('https://res.cloudinary.com/dpmlrxlzr/image/upload/v1728916828/Random_static_7_tdouie.png');
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}
::-webkit-scrollbar {
  display: none;
}

